[package]
name = "restaurant-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
anyhow = "1.0.75"
serde = "1.0.183"
serde_json = "1.0.105"
shuttle-actix-web = "0.24.0"
shuttle-runtime = "0.24.0"
shuttle-secrets = "0.24.0"
shuttle-shared-db = { version = "0.24.0", features = ["postgres"] }
tokio = "1.26.0"

[dependencies.sqlx]
version = "0.7.1"
features = ["postgres", "runtime-tokio-native-tls", "rust_decimal"]
